--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
         of all Software Development concepts.
       </p>
     </div>
+    <div class="button">
+      <input type="text" placeholder="What are you looking for?" />
+    </div>
     <div class="btn">
-      <button class="button button1">What are you looking for?</button>
+      <p class="ms">Most Search</p>
+      <button class="btn">Data Types in JavaScript</button>
+      <button class="btn">for loop in JavaScript</button>
     </div>
   </body>
 </html>
