Update of Project

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Masai_School_project</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+    </head>
     <div class="heading">
       <h1>Learn.Practice.Grow.</h1>
       <p class="para">
@@ -14,13 +13,94 @@
         of all Software Development concepts.
       </p>
     </div>
-    <div class="button">
+    <div class="input_container">
       <input type="text" placeholder="What are you looking for?" />
+      <img src="/Resoures/search.png" alt="images">
     </div>
-    <div class="btn">
+    <div class="btn_container">
       <p class="ms">Most Search</p>
       <button class="btn">Data Types in JavaScript</button>
       <button class="btn">for loop in JavaScript</button>
     </div>
+      <div class="heading2">
+        <h1>Tutorials</h1>  
+      </div>
+    <div class="flex_container">
+      <div class="box">
+        <div class="images_div">
+          <img src="./Resoures/Screenshot 2023-08-28 124917.png" alt="images1">  
+        </div>
+        <div class="JavaScript_Tutorials">
+          <div class="Title">
+            <br>
+            <h5>BEGINNER</h5>
+            <br>
+            <h1>JavaScript Tutorials</h1>
+            <br>
+            <h5>Number of modules     4</h5>
+            <br>
+            <h5>Time required to complete    2.5 hours </h5>
+            <br>
+             <p>JavaScript is one of the popular programming languages<br>  
+              that is used in most of the websites on the World Wide<br> 
+              Web. It is also known as JS and is lightweight, cross...<br>  
+             </p>
+             <h3>CERTIFICATE INCLUDED</h3>
+             <button>VIEW DETAILS</button>
+          </div>
+        </div>
+      </div>
+        <div class="box">
+          <div class="images_div">
+            <img src="/Resoures/Screenshot 2023-08-28 125043.png" alt="imges2">
+          </div>
+          <div class="figma">
+            <div class="Title">
+               <br>
+               <h5>BEGINNER</h5>
+               <BR>
+               <h1>Figma for Developers</h1>
+               <br>
+               <h5>Number of modules 1</h5>
+               <br>
+               <h5>Time required to complete 49 min</h5>
+               <br>
+               <p>
+               figma is an amazing tool to bulid UI and workflow, and<BR>
+               by understanding the tool better, you can work with<br>
+               designers better.</p> 
+               <h3>CERTIFICATE INCLUDED</h3>
+               <button>vew details</button>
+            </div>
+          </div>
+        </div>
+        <div class="box">
+          <div class="images_div">
+            <img src="./Resoures/Screenshot 2023-08-28 125305.png" alt="imges3">
+          </div>
+          <div class="Basic_of_web_development">
+            <div class="Title">
+              <br>
+              <h5>BEGINNER</h5>
+              </BR>
+              <h1>Basic of Web Development</h1>
+              <br>
+              <h5>Number of mudules 3</h5>
+              <br>
+              <h5>Time required to complete 70 mins</h5>
+              <br>
+              <p>This Masai-101 course will teach you about the basics of<br>
+              HTML and CSS. At the end of this course, you will <br> be able to create your own web apps.
+              </p>
+               <h3>CERTIFICATE INCLUDED</h3>
+               <button>view details</button> 
+            </div>
+          </div>
+        </div>
+      
+      
+    </div>
+   
+
   </body>
 </html>
