Update of masai School

--- a/index.html
+++ b/index.html
@@ -34,26 +34,32 @@
         <div class="JavaScript_Tutorials">
           <div class="Title">
             <br>
-            <h5>BEGINNER</h5>
+            <h5 class="start">BEGINNER</h5>
             <br>
             <h1>JavaScript Tutorials</h1>
             <br>
-            <h5>Number of modules     4</h5>
-            <br>
-            <h5>Time required to complete    2.5 hours </h5>
-            <br>
-             <p>JavaScript is one of the popular programming languages<br>  
+            <div class="time_period">
+            <h5>Number of modules</h5>
+            <div>4</div>
+            </div>
+           <br>
+            <div class="time_period"> 
+              <h5>Time required to complete</h5>
+              <div>2.5 hours</div>
+            </div>
+            <br> 
+           <p>JavaScript is one of the popular programming languages<br>  
               that is used in most of the websites on the World Wide<br> 
               Web. It is also known as JS and is lightweight, cross...<br>  
              </p>
              <br>
              <div class="text_btn_container">
              <h3>CERTIFICATE INCLUDED</h3>
-             <button>VIEW DETAILS</button>
+             <button class="BTTN">VIEW DETAILS</button>
              </div>
+            </div>
           </div>
         </div>
-      </div>
         <div class="box">
           <div class="images_div">
             <img src="/Resoures/Screenshot 2023-08-28 125043.png" alt="imges2">
@@ -61,13 +67,19 @@
           <div class="figma">
             <div class="Title">
                <br>
-               <h5>BEGINNER</h5>
-               <BR>
+               <h5 class="start">BEGINNER</h5>
+               <BR> 
                <h1>Figma for Developers</h1>
                <br>
-               <h5>Number of modules 1</h5>
+               <div class="time_period">
+               <h5>Number of modules </h5>
+               <div>1</div>
+               </div>
                <br>
-               <h5>Time required to complete 49 min</h5>
+               <div class="time_period">
+                <h5>Time required to complete</h5>
+                <div>49 mins</div>
+               </div>
                <br>
                <p>
                figma is an amazing tool to bulid UI and workflow, and<BR>
@@ -77,7 +89,7 @@
                <br>
                <div class="text_btn_container">
                <h3>CERTIFICATE INCLUDED</h3>
-               <button>VIEW DETAILS</button>
+               <button class="BTTN">VIEW DETAILS</button>
                </div>
             </div>
           </div>
@@ -89,25 +101,52 @@
           <div class="Basic_of_web_development">
             <div class="Title">
               <br>
-              <h5>BEGINNER</h5>
+              <h5 class="start">BEGINNER</h5>
               </BR>
               <h1>Basic of Web Development</h1>
               <br>
-              <h5>Number of mudules 3</h5>
+              <div class="time_period">
+                <h5>Number of mudules </h5>
+                <div>3</div>
+              </div>
               <br>
-              <h5>Time required to complete 70 mins</h5>
-              <br>
+              <div class="time_period">
+                <h5>Time required to complete </h5>
+                <div>70 mins</div>
+              </div>
+             <br>
               <p>This Masai-101 course will teach you about the basics of<br>
               HTML and CSS. At the end of this course, you will <br> be able to create your own web apps.
               </p>
               <div class="text_btn_container">
                <h3>CERTIFICATE INCLUDED</h3>
-               <button>VIEW DETAILS</button> 
+               <button class="BTTN">VIEW DETAILS</button> 
                </div>
-              
-            </div>
+               </div>
           </div>
         </div>
       </div>
+    </div>
+  </div>
+        <hr>
+        <div class="flex_para_container" >
+           <div class="list">
+           <ul>
+            <h2>What will you get to learn from these tutorials?</h2>
+              <li>In-depth blogs on all major aspects of software development and programming.</li>
+              <li>Tutorials on JavaScript, SQL, DSA, MERN, NodeJS, and other developer tools.</li>
+              <li>Assignments and problem statements to apply your learnings.</li>
+              <li>Tips and tricks to create portfolios on GitHub, LeetCode, HackerEarth, and HackerRank.</li>
+            </ul>
+            <br>
+            <ul>
+            <h2>How will these tutorials help you?</h2>
+              <li>Become job-ready with free resources and up your skills</li>
+              <li>Create your online presence to attract top opportunities in tech</li>
+              <li>Request tutorials for hot topics you want to be covered.</li>
+              <li>Connect with a thriving community of like-minded members! #Tribe</li>
+            </ul>
+            </div>
+          </div>
   </body>
 </html>
