--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Masai_School_project</title>
     <link rel="stylesheet" href="style.css" />
-    </head>
+  </head>
     <body>
     <div class="heading">
       <h1>Learn.Practice.Grow.</h1>
@@ -26,7 +26,7 @@
       <div class="heading2">
         <h1>Tutorials</h1>  
       </div>
-    <div class="flex_container">
+     <div class="flex_container">
       <div class="box">
         <div class="images_div">
           <img src="./Resoures/Screenshot 2023-08-28 124917.png" alt="images1">  
@@ -131,22 +131,24 @@
         <hr>
         <div class="flex_para_container" >
            <div class="list">
-           <ul>
             <h2>What will you get to learn from these tutorials?</h2>
+           <ul>
               <li>In-depth blogs on all major aspects of software development and programming.</li>
               <li>Tutorials on JavaScript, SQL, DSA, MERN, NodeJS, and other developer tools.</li>
               <li>Assignments and problem statements to apply your learnings.</li>
               <li>Tips and tricks to create portfolios on GitHub, LeetCode, HackerEarth, and HackerRank.</li>
             </ul>
-            <br>
-            <ul>
+            </div>
+            <div class="list">
             <h2>How will these tutorials help you?</h2>
+           <ul>
               <li>Become job-ready with free resources and up your skills</li>
               <li>Create your online presence to attract top opportunities in tech</li>
               <li>Request tutorials for hot topics you want to be covered.</li>
               <li>Connect with a thriving community of like-minded members! #Tribe</li>
             </ul>
-            </div>
-          </div>
+           </div>
+         </div>
+          
   </body>
 </html>
